--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -1,27 +1,53 @@
 .header {
+    border-radius: 10px;
+    overflow: hidden;
     figure {
         position: relative;
-        height: 223px;
+        height: 111px;
+        @media screen and (min-width:768px) {
+            height: 223px;
+        }
 
         .overlay {
             background: #000;
             position: absolute;
-            height: 100%;
-
+            height: 111px;
+            overflow: hidden;
+            @media screen and (min-width:768px) {
+                height: 223px;
+            }
             img {
                 opacity: 0.6;
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+                position: relative;               
             }
         }
 
         figcaption {
+            display: flex;
+            flex-flow: column;
             position: absolute;
             top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width:100%;
+            left: 5%;
+            text-align-last: left;
+            transform: translate(0%,-50%);
+            width: 100%;
             text-align: center;
             color: white;
-            font-size: 3rem;
+            font-size: 1.5rem;
+            @media screen and (min-width:768px) {
+                width:100%;
+                flex-flow: row;
+                justify-content: center;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 3rem;
+            }
+           
         }
     }
 
