--- a/src/pages/AppartmentDetails/AppartmentDetails.scss
+++ b/src/pages/AppartmentDetails/AppartmentDetails.scss
@@ -1,6 +1,7 @@
 .appartment-details {
     header {
-
+        border-radius: 25px;
+        overflow: hidden;
         figure {
 
             img {
@@ -15,7 +16,16 @@
             }
         }
     }
+    section{
+        @media screen and (min-width:768px) {
+            display: flex;
+            justify-content: space-between;
 
+             .collapsible{
+                width:48%;
+            }
+        }
+    }
     .infos {
         .location {
             color: var(--primary);
@@ -45,9 +55,17 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @media screen and (min-width:768px) {
+            flex-flow: column-reverse;
+            justify-content: space-between;
+            
+        }
         .rating {
             display: flex;
             list-style: none;
+            @media screen and (min-width:768px) {
+               margin-top: 1rem;
+            }
         }
 
         .host{
@@ -60,6 +78,10 @@
                     height: 32px;
                     border-radius: 50%;
                     margin-left: 0.5rem;
+                    @media screen and (min-width:768px) {
+                        width:64px;
+                        height: 64px;
+                    }
                 }
 
                 figcaption{
@@ -67,6 +89,10 @@
                     flex-flow: column;
                     font-size: 0.7rem;
                     color: var(--primary);
+                    @media screen and (min-width:768px) {
+                        font-size: 1rem;
+                        align-self: center;
+                    }
                 }
             }
         }
