--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -27,7 +27,8 @@
         top: 0;
         right: 0;
         font-weight: bold;
-        font-size: 1.5rem;
+        font-size: 2rem;
+        color:white;
         border:none;
         background: transparent;
         padding: 0.5rem;
